--- a/routeprofile-web/src/main/webapp/route/searchFilter.xhtml
+++ b/routeprofile-web/src/main/webapp/route/searchFilter.xhtml
@@ -3,7 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
+<head>
+	<script language="javascript" src="js/googlemaps-where.js"></script>
+</head>
 <h:body>
 	<ui:composition template="/layout/template.xhtml">
 		<ui:define name="content">
@@ -13,6 +17,7 @@
 						<div class="row">
 							<div class="page-header">
 								<h1>Búsqueda por filtros</h1>
+								<p:remoteCommand name="myRemoteCommand" process="@this" autoRun="false" action="#{searchFilterBean.saveLocation}" />
 							</div>
 							<div class="row">
 								<div class="col-sm-12">
