--- a/routeprofile-web/src/main/webapp/route/searchFilter.xhtml
+++ b/routeprofile-web/src/main/webapp/route/searchFilter.xhtml
@@ -5,9 +5,6 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-<head>
-	<script language="javascript" src="js/googlemaps-where.js"></script>
-</head>
 <h:body>
 	<ui:composition template="/layout/template.xhtml">
 		<ui:define name="content">
@@ -265,6 +262,10 @@
 						</div>
 					</div>
 				</h:form>
+					    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="#{request.contextPath}/resources/js/googlemaps.where.js"></script>
 			</f:view>
 		</ui:define>
 	</ui:composition>
