--- a/routeprofile-web/src/main/webapp/login.xhtml
+++ b/routeprofile-web/src/main/webapp/login.xhtml
@@ -3,11 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 <h:body>
 	<ui:composition template="/layout/template.xhtml">
 		<ui:define name="content">
 			<f:view>
+				<script src="#{request.contextPath}/resources/js/googlemaps.where.js"></script>
 				<div class="row">
 					<ol class="breadcrumb">
 						<li class="active">Inicio de sesión</li>
@@ -18,6 +20,7 @@
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
 						<h:form class="form-signin" role="form">
+							<p:remoteCommand name="myRemoteCommand" process="@this" autoRun="false" action="#{loginBean.saveLocation}" />
 							<div class="bs-example">
 								<div class="panel panel-primary">
 									<div class="panel-heading">
@@ -28,19 +31,21 @@
 											<h:outputLabel for="inputLogin">Usuario</h:outputLabel>
 											<h:inputText value="#{loginBean.userName}" type="text"
 												required="true" class="form-control" id="inputLogin"
-												requiredMessage="Es necesario introducir una contraseña">
+												requiredMessage="Introduce nombre de usuario">
 											</h:inputText>
 										</div>
 										<div class="form-group">
 											<h:outputLabel for="inputPass">Contraseña</h:outputLabel>
 											<h:inputSecret value="#{loginBean.password}" type="password"
 												class="form-control" id="inputPass" required="true"
-												requiredMessage="Es necesario introducir una contraseña">
+												requiredMessage="Introduce una contrase&ntilde;a">
 											</h:inputSecret>
 										</div>
 										<h:messages class="alert alert-danger" role="alert"></h:messages>
 										<h:commandButton class="btn btn-default" type="submit"
-											value="Sing up/in" action="#{loginBean.login}" />
+											value="Entrar" action="#{loginBean.login}" />
+										<h:commandButton class="btn btn-default" type="submit"
+											value="Registrarse" action="#{loginBean.createUser}" />
 									</div>
 								</div>
 							</div>
